--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,9 @@
 name = "emotion-labeling"
 compatibility_date = "2024-03-25"
 
+[build]
+command = ""
+pages_build_output_dir = "."
+
 [site]
 bucket = "."
